2017-11-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-10-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-08-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.3 features.

2017-08-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-08-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* OpenGL 4.6

2017-06-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-06-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-04-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-03-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-02-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* generator/aux_generate_typemap.rb, aux_typemap.rb (VULKANPROCNV): Added VULKANPROCNV support.
	* generator/get_gl_xml.rb: Fixed URL to fetch 'gl.xml'.

2017-02-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-02-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-01-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-01-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-12-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Tested on ruby 2.4.0p0.
	* sample/util/setup_dll.rb: Add path for Ubuntu Linux.

2016-10-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-10-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-09-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-09-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/report_env.rb: Now shows GL_VENDOR, GL_RENDERER and GL_SHADING_LANGUAGE_VERSION.
