@@ -5,7 +5,7 @@
 ...and wrapper code generator.
 
 *   Created : 2013-08-28
-*   Last modified : 2017-11-23
+*   Last modified : 2018-01-01
 
 
 ## Features ##
@@ -104,6 +104,7 @@ Use GLFW or GLUT for creating windows and OpenGL rendering contexts.
 ## Tested Environment ##
 
 *   Ruby
+    *   ruby 2.5.0p0 (2017-12-25 revision 61468) [x86_64-darwin17]
     *   ruby 2.4.1p111 (2017-03-22 revision 58053) [x86_64-darwin16]
     *   ruby 2.4.0p0 (2016-12-24 revision 57164) [x86_64-darwin16]
     *   ruby 2.3.1p112 (2016-04-26 revision 54768) [x86_64-darwin15]
@@ -219,7 +220,7 @@ Use GLFW or GLUT for creating windows and OpenGL rendering contexts.
 
 The zlib/libpng License ( http://opensource.org/licenses/Zlib ).
 
-    Copyright (c) 2013-2017 vaiorabbit <http://twitter.com/vaiorabbit>
+    Copyright (c) 2013-2018 vaiorabbit <http://twitter.com/vaiorabbit>
 
     This software is provided 'as-is', without any express or implied
     warranty. In no event will the authors be held liable for any damages
@@ -342,6 +343,7 @@ GLFW か GLUT を用意してください。ウィンドウやレンダリング
 ## テストした環境 ##
 
 *   Ruby
+    *   ruby 2.5.0p0 (2017-12-25 revision 61468) [x86_64-darwin17]
     *   ruby 2.4.1p111 (2017-03-22 revision 58053) [x86_64-darwin16]
     *   ruby 2.4.0p0 (2016-12-24 revision 57164) [x86_64-darwin16]
     *   ruby 2.3.1p112 (2016-04-26 revision 54768) [x86_64-darwin15]
