@@ -5,7 +5,7 @@ require_relative 'opengl_es_ext_command'
 
 =begin
 Ruby-OpenGL : Yet another OpenGL wrapper for Ruby (and wrapper code generator)
-Copyright (c) 2013-2017 vaiorabbit <http://twitter.com/vaiorabbit>
+Copyright (c) 2013-2018 vaiorabbit <http://twitter.com/vaiorabbit>
 
 This software is provided 'as-is', without any express or implied
 warranty. In no event will the authors be held liable for any damages
