@@ -4140,6 +4140,24 @@ module OpenGLExt
   end # self.get_ext_command_GL_NV_blend_minmax_factor
 
 
+  def self.define_ext_command_GL_NV_clip_space_w_scaling
+    OpenGL::GL_FUNCTIONS_ARGS_MAP[:glViewportPositionWScaleNV] = [-Fiddle::TYPE_INT, Fiddle::TYPE_FLOAT, Fiddle::TYPE_FLOAT]
+    OpenGL::GL_FUNCTIONS_RETVAL_MAP[:glViewportPositionWScaleNV] = Fiddle::TYPE_VOID
+    OpenGL.module_eval(<<-SRC)
+      def glViewportPositionWScaleNV(_index_, _xcoeff_, _ycoeff_)
+        f = OpenGL::get_command(:glViewportPositionWScaleNV)
+        f.call(_index_, _xcoeff_, _ycoeff_)
+      end
+    SRC
+  end # self.define_ext_command_GL_NV_clip_space_w_scaling
+
+  def self.get_ext_command_GL_NV_clip_space_w_scaling
+    [
+      'glViewportPositionWScaleNV',
+    ]
+  end # self.get_ext_command_GL_NV_clip_space_w_scaling
+
+
   def self.define_ext_command_GL_NV_conditional_render
     OpenGL::GL_FUNCTIONS_ARGS_MAP[:glBeginConditionalRenderNV] = [-Fiddle::TYPE_INT, -Fiddle::TYPE_INT]
     OpenGL::GL_FUNCTIONS_RETVAL_MAP[:glBeginConditionalRenderNV] = Fiddle::TYPE_VOID
@@ -4184,6 +4202,15 @@ module OpenGLExt
       'glSubpixelPrecisionBiasNV',
     ]
   end # self.get_ext_command_GL_NV_conservative_raster
+
+
+  def self.define_ext_command_GL_NV_conservative_raster_pre_snap
+  end # self.define_ext_command_GL_NV_conservative_raster_pre_snap
+
+  def self.get_ext_command_GL_NV_conservative_raster_pre_snap
+    [
+    ]
+  end # self.get_ext_command_GL_NV_conservative_raster_pre_snap
 
 
   def self.define_ext_command_GL_NV_conservative_raster_pre_snap_triangles
@@ -6066,6 +6093,15 @@ module OpenGLExt
     [
     ]
   end # self.get_ext_command_GL_NV_shadow_samplers_cube
+
+
+  def self.define_ext_command_GL_NV_stereo_view_rendering
+  end # self.define_ext_command_GL_NV_stereo_view_rendering
+
+  def self.get_ext_command_GL_NV_stereo_view_rendering
+    [
+    ]
+  end # self.get_ext_command_GL_NV_stereo_view_rendering
 
 
   def self.define_ext_command_GL_NV_texture_border_clamp
