@@ -9728,6 +9728,17 @@ module OpenGLExt
   end # self.get_ext_enum_GL_NV_conservative_raster_dilate
 
 
+  def self.define_ext_enum_GL_NV_conservative_raster_pre_snap
+    OpenGL.const_set('GL_CONSERVATIVE_RASTER_MODE_PRE_SNAP_NV', 0x9550) unless defined?(OpenGL::GL_CONSERVATIVE_RASTER_MODE_PRE_SNAP_NV)
+  end # self.define_ext_enum_GL_NV_conservative_raster_pre_snap
+
+  def self.get_ext_enum_GL_NV_conservative_raster_pre_snap
+    [
+      'GL_CONSERVATIVE_RASTER_MODE_PRE_SNAP_NV',
+    ]
+  end # self.get_ext_enum_GL_NV_conservative_raster_pre_snap
+
+
   def self.define_ext_enum_GL_NV_conservative_raster_pre_snap_triangles
     OpenGL.const_set('GL_CONSERVATIVE_RASTER_MODE_NV', 0x954D) unless defined?(OpenGL::GL_CONSERVATIVE_RASTER_MODE_NV)
     OpenGL.const_set('GL_CONSERVATIVE_RASTER_MODE_POST_SNAP_NV', 0x954E) unless defined?(OpenGL::GL_CONSERVATIVE_RASTER_MODE_POST_SNAP_NV)
@@ -9741,6 +9752,15 @@ module OpenGLExt
       'GL_CONSERVATIVE_RASTER_MODE_PRE_SNAP_TRIANGLES_NV',
     ]
   end # self.get_ext_enum_GL_NV_conservative_raster_pre_snap_triangles
+
+
+  def self.define_ext_enum_GL_NV_conservative_raster_underestimation
+  end # self.define_ext_enum_GL_NV_conservative_raster_underestimation
+
+  def self.get_ext_enum_GL_NV_conservative_raster_underestimation
+    [
+    ]
+  end # self.get_ext_enum_GL_NV_conservative_raster_underestimation
 
 
   def self.define_ext_enum_GL_NV_copy_depth_to_color
